load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/alexeldeib/supreme-goggles
# gazelle:proto disable_global
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-build_file_proto_mode=disable_global",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "supreme-goggles_lib",
    srcs = ["main.go"],
    importpath = "github.com/alexeldeib/supreme-goggles",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_logr_logr//:logr",
        "@io_k8s_api//certificates/v1:certificates",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/builder",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile",
    ],
)

go_binary(
    name = "supreme-goggles",
    embed = [":supreme-goggles_lib"],
    visibility = ["//visibility:public"],
)
